# silly-merchants-beta

./: .gitignore  LICENSE  Procfile  README.md  docker-compose.yml  package-lock.json  package.json  static.json  test_websocket.py
sillyworld-client/: .env.production  .npmrc  Dockerfile  next.config.js  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.json
sillyworld-client/scripts/: compress-audio.js  generate-openai-audio.js  (+6 more)
sillyworld-server/: .gitignore  Dockerfile  README.md  ai.py  exceptions.py  game.py  game_analyze.py  game_record.py  heroku.yml  items.py  llm_client.py  logger.py  main.py  models.py  multi_game_runner.py  pyproject.toml  requirements.txt  run_server.sh  server_log.txt  test_integration.py  test_thinking.py  websocket.py
sillyworld-server/game_records/: test_game_20250317_132123_20250317_132123.json  test_game_20250317_132215_20250317_132215.json  test_game_20250317_132540_20250317_132540.json  test_game_20250317_132628_20250317_132628.json  test_game_20250317_132714_20250317_132714.json  test_simulation_flow.json
sillyworld-server/prompts/: decision_prompt.txt  equalizer_result_prompt.txt  intel_result_prompt.txt  item_use_prompt.txt  persuasion_prompt.txt  purchase_prompt.txt  reflection_decision_prompt.txt  reflection_prompt.txt  system_prompt.txt
sillyworld-server/readable_records/: test_game_20250317_132123_20250317_132123.txt  test_game_20250317_132215_20250317_132215.txt
sonic_svm/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
sonic_svm/programs/sonic_svm/: Cargo.toml
sonic_svm/programs/sonic_svm/src/: lib.rs
(+97 files in other folders)
