[tool.poetry]
name = "sillyworld-server"
version = "0.1.0"
description = "Backend API for SillyWorld application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
httpx = "^0.25.0"
aiohttp = "^3.9.1"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.0"
numpy = "^1.24.0"
websockets = "^11.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 