[package]
name = "sonic_svm"
version = "0.1.0"
description = "Sonic SVM Game Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sonic_svm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14.7" 